# ncd-voting-platform

./: README.md  diagram.excalidraw  start.sh
contract/: .gitignore  Cargo.toml  README.md  build.sh
contract/scripts/: generate_election.py
contract/src/: lib.rs
gateway/: .env  .eslintrc.js  .gitignore  .mocharc.js  README.md  package-lock.json  package.json  tsconfig.json
gateway/src/: config.ts  index.ts  server.ts
gateway/src/elections/: contract.ts  routes.ts
gateway/test/: elections.test.ts
voter-dapp/: .env  README.md  package-lock.json  package.json
voter-dapp-elm/: .env  .eslintrc.js  .gitignore  README.md  elm.json  package-lock.json  package.json  webpack.config.js
voter-dapp-elm/src/: InteropDefinitions.elm  Main.elm  index.js  index.ts
voter-dapp-elm/src/blockchain/: utils.ts
voter-dapp/src/: App.tsx  blockchain.ts  index.tsx
voter-dapp/src/elections/: ElectionRow.tsx  ElectionsTable.tsx  VotingModal.tsx  contract.ts
